--- a/build.gradle
+++ b/build.gradle
@@ -20,9 +20,19 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	// jpa
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+	// lombok
 	compileOnly 'org.projectlombok:lombok'
+
+	// mysql
 	runtimeOnly 'mysql:mysql-connector-java'
+
+	// validator
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
